--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -43,8 +43,9 @@ table {
 }
 
 body {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Noto Sans SC', sans-serif;
 	line-height: 1.4;
+	color: #6a6a6a;
 }
 
 a {
@@ -59,6 +60,7 @@ h1 {
 	font-weight: 300;
 	font-size: 3rem;
 	margin: 0 auto;
+	color: #202020;
 }
 
 h2 {
@@ -67,6 +69,7 @@ h2 {
 	letter-spacing: 1px;
 	font-size: 1.8rem;
 	margin: 0 auto;
+	color: #202020;
 }
 
 b, strong {
@@ -83,8 +86,19 @@ ul.disc {
 	}
 }
 
+.header-links {
+	a {
+		color: #ffffff;
+		margin-left: 16px;
+		text-decoration: none;
+		font-size: 0.9em;
+		letter-spacing: 0.5px;
+		font-weight: 300;
+	}
+}
+
 .siteHeader {
-	max-width: 960;
+	max-width: 960px;
 	margin: 30px auto;
 }
 
