--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -72,28 +72,49 @@ h2 {
 	color: #202020;
 }
 
+h3 {
+	font-family: 'Playfair Display', serif;
+	font-weight: 200;
+	letter-spacing: 1px;
+	font-size: 1.4rem;
+	margin: 0 auto 8px;
+	color: #202020;
+}
+
+h3 + p {
+	font-weight: 300;
+	a {
+		text-decoration: none;
+	}
+}
+
 b, strong {
 	font-weight: 600;
 }
 
 ul.disc {
 	list-style: disc;
-	margin: 1em 0;
+	margin: 12px 0 30px;
 	padding: 0 0 0 20px;
 	li {
 		line-height: 1.4;
 		margin-bottom: 8px;
+		font-weight: 300;
+	}
+	a {
+		text-decoration: none;
 	}
 }
 
 .header-links {
 	a {
 		color: #ffffff;
-		margin-left: 16px;
 		text-decoration: none;
 		font-size: 0.9em;
 		letter-spacing: 0.5px;
 		font-weight: 300;
+		margin: 0 0 4px 16px;
+		display: inline-block;
 	}
 }
 
